--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,19 +25,20 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10"
+python = "^3.10"
+cachetools = ">=4.0.0"
 cvxpy = ">=1.3.2"
-ldpc = ">=0.1.50"
-networkx = ">=3.0"
-numpy = ">=1.24.4"
+ldpc = ">=0.1.0"
+networkx = ">=2.6.2"
+numpy = ">=1.22.0"
 sympy = ">=1.12"
-gurobipy = { version = ">=10.0.0", optional = true }
 
 general-superstaq = { version = ">=0.4.16", optional = true, extras = ["dev"] }
-matplotlib = { version = ">=3.7.2", optional = true }
+gurobipy = { version = ">=10.0.0", optional = true }
 
 [tool.poetry.extras]
-dev = ["general-superstaq", "matplotlib"]
+dev = ["general-superstaq"]
+gurobi = ["gurobipy"]
 
 # Check script configuration:
 
