--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,10 +34,10 @@ networkx = ">=2.6.2"
 numpy = ">=1.22.0"
 sympy = ">=1.12"
 
-general-superstaq = { version = ">=0.4.16", optional = true, extras = ["dev"] }
+checks-superstaq = { version = ">=0.5.0", optional = true, extras = ["dev"] }
 
 [tool.poetry.extras]
-dev = ["general-superstaq"]
+dev = ["checks-superstaq"]
 
 # Check script configuration:
 
