--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ extend-ignore = [
   "I201",
   "I202",
 ] # these errors conflict with black and/or isort
+type_checking_exempt_modules = ["collections.abc"]
 
 [tool.mypy]
 ignore_missing_imports = true
@@ -82,7 +83,7 @@ plugins = ["numpy.typing.mypy_plugin"]
 fail_under = 100
 show_missing = true
 skip_covered = true
-exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
+exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "@overload"]
 
 [tool.coverage.run]
 include = ["./*"]
